# endcord-rpc

./: .pre-commit-config.yaml  README.md  build.py  main.py  pyproject.toml
.github/workflows/: build-and-release.yml
endcord_rpc/: client_properties.py  discord.py  game_detection.py  gateway.py  rpc.py  user_settings_pb2.py
