[project]
name = "endcord-rpc"
version = "1.1.2"
description = "Small RPC server made from endcord parts. Provides Rich Presence and game detection only."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.11.9",
    "protobuf>=7.35.0",
    "pysocks>=1.7.1",
    "python-socks>=2.8.1",
    "psutil>=7.2.1; sys_platform != 'linux'",
    "pywin32>=311; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3; sys_platform == 'win32'",
    "urllib3>=2.7.0",
    "websocket-client>=1.9.0",
]

[dependency-groups]
build = [
    "nuitka[onefile]>=4.1.2",
    "pyinstaller>=6.20.0",
    "setuptools>=82.0.0",
]
